--- a/style.css
+++ b/style.css
@@ -13,25 +13,57 @@
 		background: #000000;
 		Display:inline-block; 
 		width: 100%;
+		height: 800px;
 		padding: 0 28px 0 0;
 		margin:-16px 0 20px -20px;
 	}
 
-	.img.robo {
-		width: 100%;
-		height: 300px;
+	.nosso-nome {
+		text-align: auto;
+		color: #FFFFFF;
+		left: 30px;
+		position: absolute;
+		font-size: 32px;
+	}
+
+	.home {
+		text-align: auto;
+		color: #FFFFFF;
+		left: 1090px;
+		top: 35px;
+		position: absolute;
+		font-size: 22px;
 	}
 
 	.entrada {
 		color: #ffffff;
 		padding: 50px;
-		margin: 210px 720px 140px 90px;
+		margin: 210px 680px 140px 90px;
 		font-size: 18px;
-		Display:inline-block;
-		object-fit: cover;
+		display: inline-block;
+		position: relative;
+	}
+
+	.img-robo {
+		position: relative;
+		width: 400px;   /*largura*/
+		height: 480px;   /*altura*/
+		left:660px;   /*esquerda*/
+		top: -170px;   /*direita*/
+	}
+
+	.logo {
+		position: absolute;
+		left: 90px;
+		top: -120px;
+		width: 300px;
+		height: 300px;
 	}
 
 	.texto {
-		float: left;
+		left: -30px;
+		top: -430px;
   		margin: 50px;
+		display: inline-block;
+		position: relative;
 	}
