--- a/style.css
+++ b/style.css
@@ -11,9 +11,9 @@
 
 	main {
 		background: #000000;
-		Display:inline-block; 
+		position: relative;
 		width: 100%;
-		height: 800px;
+		height: 1000px;
 		padding: 0 28px 0 0;
 		margin:-16px 0 20px -20px;
 	}
@@ -46,24 +46,39 @@
 
 	.img-robo {
 		position: relative;
-		width: 450px;   /*largura*/
-		height: 470px;   /*altura*/
-		left:750px;   /*esquerda*/
-		top: -180px;   /*direita*/
+		left: 300px;  /*esquerda*/
+		top: -180px;  /*direita*/
+		width: 500px;		
+		height: 720px;
+		margin: 0 -20px 0 0;
 	}
 
 	.logo {
 		position: absolute;
-		left: 90px;
-		top: -120px;
-		width: 300px;
-		height: 300px;
+		left: 1150px;
+		top: -200px;
+		width: 100px; /*largura*/
+		height: 100px; /*altura*/
 	}
 
-	.texto {
+	.nos {
+		position: relative;
+		top: -800px;
+		left: 900px;
+		font-size: 45px;
+		font-family: 'Anton', sans-serif;
+		color: #FFFFFF;
+	}
+
+	.nos:hover {
+		opacity: 0,3;
+		transition: 400ms;
+	}
+
+	/*.texto {
 		left: -30px;
 		top: -430px;
   		margin: 50px;
 		display: inline-block;
 		position: relative;
-	}
+	}*/
