--- a/style.css
+++ b/style.css
@@ -12,15 +12,13 @@
 	@keyframes animação {
 		from {color: #ffffff; width: 100%;}
 		to {color: #000000; width: 0%;}
-	}
+	} 
 
-	main {
-		background: #000000;
+	body {
+		margin: 0;
+		padding: 0;
+		background-color: black;
 		position: relative;
-		width: 100%;
-		height: 100%;
-		margin:-16px 0 -70px -20px;
-		padding: 0 28px 0 0;
 	}
 
 	.nosso-nome {
@@ -41,7 +39,7 @@
 		font-size: 22px;
 	} */
 
-	 .entrada {
+	.entrada {
 		padding: 50px;
 		margin: 210px 680px 140px 90px;
 		display: inline-block;
@@ -51,22 +49,18 @@
 	.img-robo {
 		position: relative;
 		left: 300px;  /*esquerda*/
-		top: -180px;  /*direita*/
+		top: -180px; /*direita*/
 		width: 500px;		
 		height: 720px;
 		margin: 0 -20px 0 0;
 	}
 
-	.img-robo:hover {
-		transition: 500ms;
-	} 
-
 	.logo {
 		position: absolute;
 		left: 1120px;
 		top: -200px;
-		width: 100px; /*largura*/
-		height: 100px; /*altura*/
+		width: 100px; 
+		height: 100px; 
 	}
 
 	.sobre1 { 
@@ -136,10 +130,10 @@
 		font-size: 45px;
 		font-family: 'Anton', sans-serif;
 		color: #FFFFFF;
-		text-decoration: none;]
+		text-decoration: none;
 		animation-name: animação;
 		animation-duration: 2s;
-		animation-delay: 0s;
+		animation-delay: 0s;		
 		animation-direction: reverse;
 	}
 
