--- a/loc-style.css
+++ b/loc-style.css
@@ -12,3 +12,18 @@ body {
     font-size: 40px;
     font-family: 'Inspiration', cursive;
 }
+
+.mapa {
+    padding: 3em 0;
+    background: linear-gradient(#FEFEFE, #888888);
+}
+
+.mapa-conteudo {
+    width: 940px;
+    margin: 0 auto;
+}
+
+.mapa p {
+    margin: 0 0 2em;
+    text-align: center;
+}
