--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 	}*/
 
 	@keyframes animação {
-		from {color: #ffffff; width: 100%;}
+		from {color: #ffffff; width: 2%;}
 		to {color: #000000; width: 0%;}
 	} 
 
@@ -40,8 +40,7 @@
 	} */
 
 	.entrada {
-		padding: 50px;
-		margin: 210px 680px 140px 90px;
+		margin: 180px 0 -400px 0;
 		display: inline-block;
 		position: relative;
 	}
@@ -51,21 +50,22 @@
 		left: 300px;  /*esquerda*/
 		top: -180px; /*direita*/
 		width: 500px;		
-		height: 720px;
-		margin: 0 -20px 0 0;
+		height: 609px;
+		margin: 0 -20px -500px 0;
 	}
 
 	.logo {
-		position: absolute;
+		position: relative;
 		left: 1120px;
-		top: -200px;
+		top: -180px;
 		width: 100px; 
 		height: 100px; 
+		
 	}
 
 	.sobre1 { 
 		position: relative;
-		top: -800px;
+		top: -100px;
 		left: 900px;
 		font-size: 45px;
 		font-family: 'Anton', sans-serif;
@@ -85,7 +85,7 @@
 	 .sobre {
 		position: relative;
 		float: left;
-		top: -940px;
+		top: -240px;
 		left: 924px;
 		font-size: 14px;
 		font-family: 'Josefin Sans', sans-serif;
@@ -95,8 +95,8 @@
 
 	.trabalhos2 {
 	    position: relative;
-		top: -630px;
-		left: 24px;
+		top: -130px;
+		left: 210px;
 		font-size: 45px;
 		font-family: 'Anton', sans-serif;
 		color: #FFFFFF;
@@ -115,8 +115,8 @@
 	.trabalhos {
 		position: relative;
 		float: left;
-		top: -700px;
-		left: -18px;
+		top: -200px;
+		left: 168px;
 		font-size: 14px;
 		font-family: 'Josefin Sans', sans-serif;
 		color: #FFFFFF;
@@ -125,7 +125,6 @@
 
 	.loc3 {
 		position: relative;
-		top: -500px;
 		left: 900px;
 		font-size: 45px;
 		font-family: 'Anton', sans-serif;
@@ -145,7 +144,6 @@
 	.loc {
 		position: relative;
 		float: left;
-		top: -500px;
 		left: 740px;
 		font-size: 14px;
 		font-family: 'Josefin Sans', sans-serif;
