--- a/trabalhos-style.css
+++ b/trabalhos-style.css
@@ -13,6 +13,15 @@ body {
     font-family: 'Inspiration', cursive;
 }
 
+.imagem { 
+    background-image: url(imagens/wallpaper002.png);
+    height: 200px;
+    border: 1px solid black;
+    border-radius: 20px;
+    margin: 10px;
+}
+     
+
 .logo {
     position: absolute;
     left: 1120px;
