--- a/abas-style.css
+++ b/abas-style.css
@@ -21,10 +21,7 @@ body {
 
 .x {
     position: absolute;
-    left: 1260px;
-    top: 20px;
-    width: 100px; 
-    height: 100px; 
+    left: 1150px;
     color: red;
     font-size: 70px;
     font-family: 'Montserrat', sans-serif;
@@ -37,16 +34,16 @@ body {
 }
 
 .img-robo {
-    position: absolute;    
-    left: 50px;
-    top: 100px;
-    height: 557px;
-    width: 630px;
+    position: absolute; 
+    left: -385px;
+    top: -110px;
+    height: 870px;
+    margin: 0 0 -200px 0;
 }
 
-.sobre1 {
+.nos1 {
 	color: #322073;
-    position: relative;
+    position: absolute;
     top: 200px;
 	left: 860px;
 	font-size: 55px;
@@ -58,15 +55,15 @@ body {
     font-family: 'Montserrat', sans-serif;
 }
 
-.sobre1:hover {
+.nos1:hover {
     transition: 0ms;
     color: #b2a4e6 !important;
 }
 
 .trabalhos2 {
     color: #FFFFFF;
-    position: relative;
-    top: 230px;
+    position: absolute;
+    top: 305px;
     left: 860px;
     font-size: 55px;
     text-decoration: none;	
@@ -84,8 +81,8 @@ body {
 
 .loc3 {
     color: #FFFFFF;
-    position: relative;
-    top: 260px;
+    position: absolute;
+    top: 410px;
     left: 860px;
     font-size: 55px;
     text-decoration: none;	
