--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 	}*/
 
 	@keyframes animação {
-		from {color: #ffffff; width: 2%;}
+		from {color: #ffffff; width: 100%;}
 		to {color: #000000; width: 0%;}
 	} 
 
@@ -46,16 +46,14 @@
 	}
 
 	.img-robo {
-		position: relative;
-		left: 300px;  /*esquerda*/
+		position: absolute;
+		left: 410px;  /*esquerda*/
 		top: -180px; /*direita*/
-		width: 500px;		
 		height: 609px;
-		margin: 0 -20px -500px 0;
 	}
 
 	.logo {
-		position: relative;
+		position: absolute;
 		left: 1120px;
 		top: -180px;
 		width: 100px; 
@@ -64,9 +62,9 @@
 	}
 
 	.sobre1 { 
-		position: relative;
-		top: -100px;
-		left: 900px;
+		position: absolute;
+		top: -19px;
+		right: -895px;
 		font-size: 45px;
 		font-family: 'Anton', sans-serif;
 		color: #FFFFFF;
@@ -83,10 +81,10 @@
 	} 
 
 	 .sobre {
-		position: relative;
-		float: left;
-		top: -240px;
-		left: 924px;
+		position: absolute;
+		text-align: right;
+		top: 50px;
+		right: -925px;
 		font-size: 14px;
 		font-family: 'Josefin Sans', sans-serif;
 		color: #FFFFFF;
@@ -94,9 +92,9 @@
 	}
 
 	.trabalhos2 {
-	    position: relative;
-		top: -130px;
-		left: 210px;
+	    position: absolute;
+		top: 110px;
+		right: -266px;
 		font-size: 45px;
 		font-family: 'Anton', sans-serif;
 		color: #FFFFFF;
@@ -113,10 +111,10 @@
 	}
 
 	.trabalhos {
-		position: relative;
-		float: left;
-		top: -200px;
-		left: 168px;
+		position: absolute;
+		text-align: right;
+		top: 180px;
+		right: -340px;
 		font-size: 14px;
 		font-family: 'Josefin Sans', sans-serif;
 		color: #FFFFFF;
@@ -124,8 +122,9 @@
 	}
 
 	.loc3 {
-		position: relative;
-		left: 900px;
+		position: absolute;
+		top: 230px;
+		right: -910px;
 		font-size: 45px;
 		font-family: 'Anton', sans-serif;
 		color: #FFFFFF;
@@ -142,9 +141,10 @@
 	} 
 
 	.loc {
-		position: relative;
-		float: left;
-		left: 740px;
+		position: absolute;
+		text-align: right;
+		top: 300px;
+		right: -1016px; 
 		font-size: 14px;
 		font-family: 'Josefin Sans', sans-serif;
 		color: #FFFFFF;
