--- a/trabalhos-style.css
+++ b/trabalhos-style.css
@@ -30,9 +30,8 @@ body {
 
 .cruzamento {
     position: relative;
-    left: 200px;
-    top: 180px;
-    width: 100px; 
-    height: 100px; 
+
+    width: 10%; 
+  
     
 }
