--- a/abas-style.css
+++ b/abas-style.css
@@ -4,7 +4,6 @@
 }
 
 body {
-    margin: 0;
     padding: 0;
     background-color: black;
     position: relative;
@@ -35,14 +34,12 @@ body {
 
 .img-robo {
     position: absolute; 
-    left: -385px;
-    top: -110px;
-    height: 870px;
-    margin: 0 0 -200px 0;
+    text-align: center;
+    height: 670px;
+    margin: 0 0 00px 0;
 }
 
 .nos1 {
-	color: #322073;
     position: absolute;
     top: 200px;
 	left: 860px;
