--- a/trabalhos-style.css
+++ b/trabalhos-style.css
@@ -37,9 +37,14 @@ body {
 }
 
 .ondaverde {
-    position: relative;
-
-    width: 35%; 
+    position: absolute;
+    width: 202px;
+    height: 218px;
+    left: 155px;
+    top: 61px;
+    
+    
+    
   
     
 }
