--- a/trabalhos-style.css
+++ b/trabalhos-style.css
@@ -40,8 +40,8 @@ body {
 
 .ondaverde {
     position: absolute;
-    width: 202px;
-    height: 223px;
+    width: 20%;
+    height: 20%;
     left: 155px;
     top: 379px;
 
