--- a/abas-style.css
+++ b/abas-style.css
@@ -1,96 +1,70 @@
-@keyframes animação {
-    from {color: #ffffff; width: 100%;}
-    to {color: #000000; width: 0%;}
+ nav.menu-lateral {
+    width: 80px;
+    height: 100%;
+    background-color: #111;
+    padding: 50px 0 40px 1%; 
+    box-shadow: 3px 0 0 #78909c;
+    position: fixed;
+    top: 0;
+    left: 0;
+    overflow: hidden;
+    transition: .5s;
 }
 
-body {
-    padding: 0;
-    background-color: black;
-    position: relative;
+nav.menu-lateral:hover {
+    width: 300px;
 }
 
-.nosso-nome {
-    text-align: auto;
-    color: #FFFFFF;
-    left: 50px;
-    position: absolute;
-    font-size: 40px;
-    font-family: 'Inspiration', cursive;
+.btn-expandir {
+    width: 100%;
+    padding-left: 10px;
+} 
+
+.btn-expandir > i {
+    color: #fff;
+    font-size: 24px;
+    cursor: pointer;
+} 
+
+ul {
+    height: 100%;
+    list-style-type: none;
+} 
+
+ul li.item-menu{
+    transition: .2s;
 }
 
-.x {
-    position: absolute;
-    left: 1150px;
-    color: red;
-    font-size: 70px;
-    font-family: 'Montserrat', sans-serif;
+ul li.ativo{
+    background-color: #78909c;
+}
+
+ul li.item-menu:hover {
+    background: #78909c;
+}
+
+ul li.item-menu a{
+    color: #fff;
     text-decoration: none;
+    font-size: 20px;
+    padding: 20px 4%;
+    display: flex;
+    margin-bottom: 20px;
+    line-height: 30px;
+} 
+
+ul li.item-menu a .txt-link {
+    margin-left: 70px;
+    transition: 1s;
+    opacity: 0;
 }
 
-.x:hover {
-    transition: 0ms;
-    color: #f87171 !important;
+nav.menu-lateral:hover .txt-link {
+    margin-left: 40px;
+    opacity: 1;
 }
 
-.img-robo {
-    position: absolute; 
-    text-align: center;
-    height: 670px;
-    margin: 0 0 00px 0;
-}
-
-.nos1 {
-    position: absolute;
-    top: 200px;
-	left: 860px;
-	font-size: 55px;
-	text-decoration: none;	
-    animation-name: animação;
-	animation-duration: 2s;
-	animation-delay: 0s;
-	animation-direction: reverse;
-    font-family: 'Montserrat', sans-serif;
-}
-
-.nos1:hover {
-    transition: 0ms;
-    color: #b2a4e6 !important;
-}
-
-.trabalhos2 {
-    color: #FFFFFF;
-    position: absolute;
-    top: 305px;
-    left: 860px;
-    font-size: 55px;
-    text-decoration: none;	
-    animation-name: animação;
-	animation-duration: 2s;
-	animation-delay: 0s;
-	animation-direction: reverse;
-    font-family: 'Montserrat', sans-serif;
-}
-
-.trabalhos2:hover {
-    transition: 0ms;
-    color: #b2a4e6 !important;
-}
-
-.loc3 {
-    color: #FFFFFF;
-    position: absolute;
-    top: 410px;
-    left: 860px;
-    font-size: 55px;
-    text-decoration: none;	
-    animation-name: animação;
-	animation-duration: 2s;
-	animation-delay: 0s;
-	animation-direction: reverse;
-    font-family: 'Montserrat', sans-serif;
-}
-
-.loc3:hover {
-    transition: 0ms;
-    color: #b2a4e6 !important;
+ul li.item-menu a .icon i {
+    font-size: 30px;
+    margin-left: 10px;
 }
