--- a/abas-style.css
+++ b/abas-style.css
@@ -2,7 +2,7 @@
     width: 80px;
     height: 100%;
     background-color: #111;
-    padding: 50px 0 40px 1%; 
+    padding: 50px 0 40px 17px; 
     box-shadow: 3px 0 0 #78909c;
     position: fixed;
     top: 0;
