--- a/style.css
+++ b/style.css
@@ -26,6 +26,21 @@ body {
 .elemento {
     width: 150px;
     height: 150px;
+	min-widht: 640px;
+	transform: translatey(0px);
+	animation: float 5s ease-in-out infinite;
+}
+
+@keyframes float {
+	0% {
+		transform: translatey(0px);
+	}
+	50% { 
+		transform: translatey(0px);
+	}
+	100% { 
+		transform: translatey(0px);
+	}
 }
 
 .nosso-nome {
