--- a/trabalhos-style.css
+++ b/trabalhos-style.css
@@ -30,8 +30,7 @@ body {
 
 .imagem {
     position: absolute;
-    width: 417px;
-    height: 385px;
+    width: 50%;
     left: 62px;
     top: -49px;
   
