--- a/abas-style.css
+++ b/abas-style.css
@@ -1,10 +1,10 @@
  nav.menu-lateral {
     width: 80px;
-    height: 100%;
-    background-color: #111;
-    padding: 50px 0 40px 17px; 
-    box-shadow: 3px 0 0 #78909c;
+    height: 50px;
+    padding: 20px 0 40px 17px; 
+    /* box-shadow: 2px 2px #78909c; */
     position: fixed;
+    margin: 10px;
     top: 0;
     left: 0;
     overflow: hidden;
@@ -13,6 +13,7 @@
 
 nav.menu-lateral:hover {
     width: 300px;
+    height: 100%;
 }
 
 .btn-expandir {
