--- a/abas-style.css
+++ b/abas-style.css
@@ -1,10 +1,10 @@
  nav.menu-lateral {
     width: 80px;
     height: 50px;
+    background-color: black;
     padding: 20px 0 40px 17px; 
     /* box-shadow: 2px 2px #78909c; */
     position: fixed;
-    margin: 10px;
     top: 0;
     left: 0;
     overflow: hidden;
@@ -14,6 +14,7 @@
 nav.menu-lateral:hover {
     width: 300px;
     height: 100%;
+    /* box-shadow: 2px 0 0 0 #78909c; */
 }
 
 .btn-expandir {
@@ -33,15 +34,17 @@ ul {
 } 
 
 ul li.item-menu{
-    transition: .2s;
+    transition: .3s;
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
 }
 
 ul li.ativo{
-    background-color: #78909c;
+    background: linear-gradient( to right, #78909c 1%, #000 70%)
 }
 
 ul li.item-menu:hover {
-    background: #78909c;
+    background: linear-gradient( to right, #78909c 1%, #000 70%)
 }
 
 ul li.item-menu a{
