--- a/loc-style.css
+++ b/loc-style.css
@@ -14,29 +14,30 @@ body {
 }
 
 .elemento {
+    position: fixed;
     width: 150px;
     height: 150px;
 }
 
-.nosso-nome {
+/* .nosso-nome {
     color: white;
     font-size: 40px;
 	font-family: 'Inspiration', cursive;
     position: absolute;
     top: 30px;
     left: 150px;
-}
+} */
 
 .fale-conosco {
     text-align: center;
     color: white;
-    margin: -70px 0 20px 0;
+    margin: 0 0 20px 0;
     font-size: 20px;
 }
 
 .titulo {
     font-size: 40px;
-    margin: -30px 0 20px 0;
+    margin: 70px 0 30px 0;
 }
 
 .inf {
