--- a/nos-style.css
+++ b/nos-style.css
@@ -1,29 +1,32 @@
-body {
-    margin: 0;
+* {
     padding: 0;
+    margin: 0;
+}
+
+body {
+    height: 100vh;
     background-color: black;
 }
 
-.nosso-nome {
+/* .nosso-nome {
     position: relative;
     color: #FFFFFF;
     left: 50px;
     position: absolute;
     font-size: 40px;
     font-family: 'Inspiration', cursive;
+}  */
+
+.container {
+    display: flex;
+    justify-content: flex-end;
 }
 
-.logo {
-    position: absolute;
-    width: 8%; 
-    left: 1117px;
-    top: 0px;
-} 
-
-/* .entrada {
-    margin: 180px 0 -400px 0;
-    position: relative;
-} */
+.elemento {
+    position: fixed;
+    width: 150px;
+    height: 150px;
+}
 
 .estudante-imagem {
     width: 120px;
