--- a/trabalhos-style.css
+++ b/trabalhos-style.css
@@ -47,7 +47,8 @@ body {
 
 .trabalho {
     position: absolute;
-    width: 407px;
-   height: 386px;
+    width: 330%;
+    left: 1561px;
+    top: -2112px;
 
 }
