--- a/trabalhos-style.css
+++ b/trabalhos-style.css
@@ -34,6 +34,7 @@ body {
     left: 62px;
     top: -49px;
     border-radius: 8px;
+
   
     
 }
@@ -50,5 +51,8 @@ body {
 .trabalho {
     position: absolute;
     width: 330%;
+    left: 85px;
+    top: 450px;
+    border-radius: 8px;
 }
 
