--- a/trabalhos-style.css
+++ b/trabalhos-style.css
@@ -50,9 +50,10 @@ body {
 
 .trabalho {
     position: absolute;
-    width: 330%;
     left: 85px;
     top: 450px;
     border-radius: 8px;
+    width: 407px;
+height: 386px;
 }
 
