--- a/trabalhos-style.css
+++ b/trabalhos-style.css
@@ -49,11 +49,11 @@ body {
 }
 
 .trabalho {
-    position: absolute;
+    position: relative;
+    width: 330%;
     left: 85px;
     top: 450px;
     border-radius: 8px;
-    width: 407px;
-height: 386px;
+    
 }
 
