--- a/trabalhos-style.css
+++ b/trabalhos-style.css
@@ -50,8 +50,8 @@ body {
 
 .trabalho {
     position: absolute;
-    width: 335%;
-    left: 100px;
+    width: 210;
+    left: 250px;
     top: -49px;
     border-radius: 8px;
     
