--- a/trabalhos-style.css
+++ b/trabalhos-style.css
@@ -50,7 +50,7 @@ body {
 
 .trabalho {
     position: absolute;
-    width: 100;
+    width: 100px;
     left: 250px;
     top: -49px;
     border-radius: 8px;
