--- a/trabalhos-style.css
+++ b/trabalhos-style.css
@@ -50,7 +50,7 @@ body {
 
 .trabalho {
     position: absolute;
-    width: 567px;
+    width: 330%;
     left: 476px;
     top: 54px;
     border-radius: 8px;
