--- a/trabalhos-style.css
+++ b/trabalhos-style.css
@@ -48,8 +48,10 @@ body {
 .trabalho {
     position: absolute;
     width: 330%;
-    left: 787px;
+    left: 62px;
     top: -2112px;
+    height: 386px;
 
 }
+
 
