--- a/loc-style.css
+++ b/loc-style.css
@@ -1,10 +1,10 @@
-* {
+*{
     padding: 0;
     margin: 0;
 }
 
 body {
-    height: 100vh;
+    height: 100%;
     background-color: black;
 }
 
@@ -19,14 +19,6 @@ body {
     height: 150px;
 }
 
-/* .nosso-nome {
-    color: white;
-    font-size: 40px;
-	font-family: 'Inspiration', cursive;
-    position: absolute;
-    top: 30px;
-    left: 150px;
-} */
 
 .fale-conosco {
     text-align: center;
@@ -43,9 +35,6 @@ body {
 .inf {
     margin: 10px;
 }
-
 .mapa-conteudo{
-	width: 100%;
-	margin: -450px 0 0 0;
+    width: 100%;
 }
-
