--- a/trabalhos-style.css
+++ b/trabalhos-style.css
@@ -69,7 +69,7 @@ body {
 .sinal {
     position: absolute;
     width: 330%;
-    left: 1120pxpx;
+    left: 1120px;
     top: 379px;
     border-radius: 8px;
 
