--- a/trabalhos-style.css
+++ b/trabalhos-style.css
@@ -84,6 +84,17 @@ body {
 
 }
 
+.projetofoto {
+    position: absolute;
+    width: 330%;
+    left: 1120px;
+    top: 379px;
+    border-radius: 8px;
+
+}
+
+
+
 
 
 
