--- a/trabalhos-style.css
+++ b/trabalhos-style.css
@@ -93,6 +93,16 @@ body {
 
 }
 
+.trabalhosiimg {
+    position: absolute;
+    width: 330%;
+    left: 1557px;
+    top: 379px;
+    border-radius: 8px;
+
+}
+ 
+ 
 
 
 
