--- a/style.css
+++ b/style.css
@@ -14,8 +14,8 @@ body {
     right: 0;
     bottom: 0;
     left: 0;
-    width: auto;
-    height: 90%;
+    width: 100%;
+    height: 80%;
     margin: auto;
 	max-width: 640px;
 	transform: translatey(0px);
@@ -33,6 +33,19 @@ body {
 	100% { 
 		transform: translatey(30px);
 	}
+}
+
+.texto {
+    color: white;
+    text-align: center;
+}
+
+.nosso-nome{
+    font-size: 30px;
+}
+
+.descricao {
+    font-size: 20px;
 }
 
 .container {
