--- a/style.css
+++ b/style.css
@@ -5,59 +5,64 @@
 
 body {
     height: 100vh;
-    background-color: black;
+    background: linear-gradient( black,#011526, black);
 }
 
 .center {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
+    float: right;
     width: 100%;
-    height: 80%;
-    margin: auto;
-	max-width: 640px;
+    margin: 30px 0 0 0;
+	max-width: 510px;
 	transform: translatey(0px);
 	animation: float 6s ease-in-out infinite;
-    z-index: 1;
+    z-index: 1; 
 }
 
 @keyframes float {
 	0% {
-		transform: translatey(30px);
+		transform: translatey(20px);
 	}
 	50% { 
 		transform: translatey(0px);
 	}
 	100% { 
-		transform: translatey(30px);
+		transform: translatey(20px);
 	}
 }
 
-.texto {
-    color: white;
-    text-align: center;
+.principal {
+    position: relative;
+    top: 150px;
+    margin:0;
+    text-align:center;
+    font-family: 'Geologica', sans-serif;
 }
 
 .nosso-nome{
-    font-size: 30px;
+    font-size: 60px;
+    color: white;
+    background-image: linear-gradient(to right, #1E1B8C, #3084F2, #3084F2, #2E38F2);  
+    background-clip: text;
+    -webkit-background-clip: text; 
+    -webkit-text-fill-color: transparent;
+    color: black;
 }
 
 .descricao {
+    color: white;
     font-size: 20px;
+    padding: 60px;
 }
 
 .container {
-    display: flex;
-    justify-content: flex-end;
+    float: right;
 }
 
 .elemento {
-    position: fixed;
-    width: 120px;
-    height: 120px;
-    z-index: 0;
+    margin: -45px 0 0 0;
+    width: 170px;
+    height: 170px;
+    z-index: 0; 
 }
 
 @media screen and (max-width: 640px) { 
@@ -65,6 +70,11 @@ body {
         width: 100%;
         height: 70%;
         right: 10px;
+        float: none;
     }
-    
+
+    .elemento {
+        width: 0 auto;
+        height: 0 auto;
+    }
 }
