--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ body {
 
 .principal {
     position: relative;
-    top: 150px;
+    top: 170px;
     margin:0;
     text-align:center;
     font-family: 'Geologica', sans-serif;
@@ -52,6 +52,7 @@ body {
     color: white;
     font-size: 20px;
     padding: 60px;
+    margin: -20px 0 0 0;
 }
 
 .container {
@@ -69,12 +70,18 @@ body {
     .center {
         width: 100%;
         height: 70%;
-        right: 10px;
+        right: 17px;
         float: none;
+        margin: 0 0 -70px 0;
     }
 
     .elemento {
-        width: 0 auto;
-        height: 0 auto;
+        float: right;
+        width: 37%;
+        height: 37%;
+    }
+
+    .descricao {
+        margin: -20px 0 0 0;
     }
 }
