--- a/style.css
+++ b/style.css
@@ -31,9 +31,8 @@ body {
 }
 
 .principal {
-   /* position: relative;
-    top: 170px;*/
-    align-items: center;
+    position: relative;
+    top: 170px;
     margin:0;
     text-align:center;
     font-family: 'Geologica', sans-serif;
