--- a/abas-style.css
+++ b/abas-style.css
@@ -3,7 +3,7 @@
     height: 40px;
     margin: 10px 0 0 0;
     padding: 20px 0 40px 17px; 
-    box-shadow: 2px 2px 2px 2px #78909c; 
+   /* box-shadow: 2px 2px 2px 2px #78909c; */
     border-radius: 20px;
     position: fixed;
     top: 0;
