--- a/trabalhos-style.css
+++ b/trabalhos-style.css
@@ -28,7 +28,7 @@ body {
     position: relative;
 }
 
-/*.imagem {
+.imagem {
     position: absolute;
     width: 330%;
     left: 320px;
@@ -100,48 +100,8 @@ body {
     top: 379px;
     border-radius: 8px;
 
-}*/
-
-.card.img1{
- padding: 10px;
- width: 330px;
- min-height: 300px;
- border-radius: 25px;
- background: #e8e8e8;
- position: absolute;
- top: 150px;
- right: 745px;
 }
 
-.card.img1:hover {
-    translate: 0 -10px;
-}
-
-.card.img1-titulodafoto{
-    font-size: 18px;
-    font-weight: 600;
-    color: #2e54a7;
-    margin: 15px 0 0 10px;
-    font-family: 'Outfit';
-    font-style: normal;
-}
-
-.card.img1-img1{
-    min-height: 100px;
-    width: 100%;
-    height: 100%;
-
-    background-color: #e8e8e8;
-    border-radius: 15px;
-
-
-}
-
-.card.img1-descrição{
-    margin: 13px 0 0 10px;
-    color: rgb(31, 31, 31);
-    font-size: 15px;
-}
 
  
  
