--- a/loc-style.css
+++ b/loc-style.css
@@ -38,7 +38,7 @@ body {
 .mapa-conteudo{
     width: 100%;
 }
-
+/* 
 .rodape{
     background-color: blueviolet;
 }
@@ -54,3 +54,4 @@ body {
 .img2 {
     width:100%;
 }
+ */
