--- a/trabalhos-style.css
+++ b/trabalhos-style.css
@@ -28,8 +28,8 @@ body {
     position: relative;
 }
 
-.estudante-imagem {
-    width: 120px;
+.projetofoto {
+    width: 330px;
 }
 
 .estudante-nome {
