--- a/trabalhos-style.css
+++ b/trabalhos-style.css
@@ -28,8 +28,8 @@ body {
     position: relative;
 }
 
-.projetofoto {
-    width: 290px;
+.estudante-imagem {
+    width: 330px;
 }
 
 .estudante-nome {
