--- a/trabalhos-style.css
+++ b/trabalhos-style.css
@@ -22,7 +22,7 @@ body {
     justify-content: flex-end;
 }
 
-@.elemento {
+.elemento {
     position: fixed;
     width: 150px;
     height: 150px;
@@ -35,7 +35,7 @@ box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 img {
-widht: 100%;
+widht: 20%;
 }
 
 div.container {
