--- a/trabalhos-style.css
+++ b/trabalhos-style.css
@@ -5,7 +5,7 @@
 
 body {
     height: 100vh;
-    background-color: black;
+    background-color: green;
 }
 
 /* .nosso-nome {
@@ -28,19 +28,18 @@ body {
     height: 150px;
 }
 
-div.polaroid (
-width:80%;
-background-color: white;
-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+.polaroid {
+    border-bottom: 60px solid white;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 img {
-widht: 20%;
+    width: 20%;
 }
 
-div.container {
-text-align: center;
-padding: 10px 20px;
+div.container2 {
+    text-align: center;
+    padding: 10px 20px;
 }
 
 /*.estudante-imagem {
