--- a/trabalhos-style.css
+++ b/trabalhos-style.css
@@ -30,7 +30,7 @@ body {
 
 .polaroid {
     border-bottom: 60px solid white;
-    box-shadow: 0 4px 8px 0 rgba(15, 12, 187, 0.801), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    box-shadow: 0 4px 8px 0 rgb(61, 57, 252), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 img {
