--- a/abas-style.css
+++ b/abas-style.css
@@ -88,8 +88,10 @@ ul li.item-menu a .icon i {
     } 
 
     nav.menu-lateral:active {
+        
         widht:100%;
         height: 100%;
+        background-color: transparent;
     } 
 
 } 
